add jdk11 jvm opts